table style added

--- a/index.html
+++ b/index.html
@@ -60,10 +60,14 @@
                     <input type="text" name="age" id="age" placeholder="MMMM">
                     <button id="submit" class="formButton">Patrvitinti</button>
                 </div>
+                <button id="clear" class="formButton2">Išvalyti sarasa</button>
             </form>
-            <button id="clear" class="formButton2">Išvalyti sarasa</button>
-            <div id="table">
-                <table id="tableData">
+            
+            <div>
+                <table id="table">
+                    <tbody id="tableData">
+                        <tr><td>NR</td><td>Vardas</td><td>Pavarde</td><td>Amzius</td></tr>
+                    </tbody>
 
                 </table>
             </div>
